# chess-ai

./: Cargo.toml  README.md
src/: algo.rs  board.rs  config.rs  constants.rs  dragger.rs  game.rs  main.rs  menu.rs  piece.rs  team.rs  tile.rs  utils.rs
