[package]
name = "chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.25"
serde = {version = "1.0.152", features = ["derive"]}
rand = "0.8.5"
bincode = "1.3.3"
itertools = "0.10.5"
rayon = "1.7.0"
num_cpus = "1.15.0"